# gantry

./: .cursorrules  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  RUNBOOK.md  builder.Dockerfile  docker-compose.yml  gantry.py  policy.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  self-heal.yml
assets/: .gitkeep  Demo.mov
aws/: bedrock-policy.json  bedrock-role-trust-policy.json  setup-iam-role.sh  setup-iam.sh
cloudflare/: config.yml
missions/: missions.db
missions/55c31e21-ea66-4d03-9ef9-305b45c1c650/: audit_pass.json  flight_recorder.json  manifest.json
missions/585068d9-4482-402f-bff2-e4b0c85f00fb/: audit_pass.json  flight_recorder.json  manifest.json
missions/867a64e9-7927-4198-98fe-abe59bb325e3/: audit_report.json  flight_recording.json  manifest.json
missions/a909d632-e678-47a0-b1a2-796c4e2b9520/: audit_fail.json  audit_pass.json  flight_recorder.json  manifest.json
missions/be31fe70-b04f-4fce-96a8-574799b0169a/: audit_fail.json  flight_recorder.json  manifest.json
missions/d0eb3228-1e35-44d5-80e7-9e0a0536ca2a/: audit_pass.json  flight_recorder.json  manifest.json
missions/fac9c581-fee0-492f-8589-ffc2b94153b6/: audit_pass.json  flight_recorder.json  manifest.json
prompts/: consult.md  heal.md  system.md
scripts/: __init__.py  clear_missions.py
src/: __init__.py  main.py  main_fastapi.py
src/core/: __init__.py  architect.py  auth.py  auth_v2.py  consultant.py  db.py  deployer.py  fleet.py  fleet_v2.py  foundry.py  policy.py  publisher.py
src/domain/: __init__.py  models.py
src/infra/: __init__.py  docker_client.py  git_client.py
src/skills/: __init__.py
src/skills/consult/: SKILL.md  __init__.py  handler.py
src/static/: index.html
tests/: __init__.py  conftest.py  test_architect.py  test_auth.py  test_auth_extended.py  test_db.py  test_db_extended.py  test_deployer.py  test_deployer_extended.py  test_docker_client.py  test_docker_extended.py  test_fleet.py  test_fleet_extended.py  test_foundry.py  test_git_client.py  test_git_extended.py  test_main.py  test_main_extended.py  test_models.py  test_policy.py  test_policy_extended.py  test_publisher.py  test_publisher_extended.py
