# =============================================================================
# GANTRY PROJECT CONFIGURATION
# =============================================================================
# Unified configuration for linting, testing, and code quality tools.
# =============================================================================

[project]
name = "gantry"
version = "1.0.0"
description = "AI-Powered Software Studio - Voice & Chat"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
# Ruff configuration for linting and formatting
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "E402",    # module level import not at top (needed for dotenv loading)
    "B008",    # function call in default argument
    "B904",    # raise from err (verbose, not always needed)
    "PLR0912", # too many branches (complex logic is sometimes needed)
    "PLR0913", # too many arguments
    "PLR0915", # too many statements (complex functions)
    "PLR2004", # magic value comparison
    "PLW0603", # global statement (needed for connection pool)
    "PLW1508", # invalid env default type (int is fine)
    "PLW1510", # subprocess without check (handled manually)
    "PLC0415", # import not at top-level (sometimes needed)
    "PTH110",  # os.path.exists (mixed pathlib usage is fine)
    "PTH123",  # open() vs Path.open() (both work fine)
    "ARG002",  # unused method argument (interface compatibility)
    "W291",    # trailing whitespace in SQL strings
    "W293",    # blank line with whitespace
    "RUF001",  # ambiguous unicode (× in HTML templates)
    "RUF013",  # implicit Optional (verbose typing)
    "SIM105",  # contextlib.suppress (try/except is clearer)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
exclude = ["tests", "venv", "missions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 20
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]  # assert usage in tests
